syntax = "proto3";

option csharp_namespace = "Address.Server.Protos";

package addressserver;

import "google/protobuf/timestamp.proto";

service AddressBookServer {
  rpc AddUserAddress (AddressAdditionRequest) returns (AddressAdditionResponse);
}

message AddressEnrollment {
    repeated AddressAdditionRequest enrollments = 1;
}

message AddressAdditionRequest {
  string name = 1;
  string address = 2;
  string enrollment = 3;
}

message AddressAdditionResponse {
  string message = 1;
}
